apps/base/mealie/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mealie-deployment
  namespace: mealie
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mealie
  template:
    metadata:
      labels:
        app: mealie
    spec:
      containers:
        - name: mealie
          image: ghcr.io/mealie-recipes/mealie:v3.11.0
          ports:
            - name: http
              containerPort: 9000
          volumeMounts:
            - mountPath: /app/data/
              name: mealie-data
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
      volumes:
        - name: mealie-data
          persistentVolumeClaim:
            claimName: mealie-data
